--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # 1/ Project name -------------------------------------------------
 # Must be lower-case, no spaces and no invalid path chars.
 # Will be used also as the WP database name
-PROJECT_NAME=
+PROJECT_NAME=ec2
 
 # 2/ Global settings & configuration
 AWS_ID=
