--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     command: /bin/bash -c "exec nginx -g 'daemon off;'"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.PROJECT_NAME-http.rule=PROJECT_URL"
+      - "traefik.http.routers.PROJECT_NAME-http.rule=(`https://www.change-me-with-your-domain.com`)"
       - "traefik.http.routers.PROJECT_NAME-http.entrypoints=http"
       - "traefik.http.routers.PROJECT_NAME-http.middlewares=https-redirect@file"
-      - "traefik.http.routers.PROJECT_NAME-https.rule=Host(`PROJECT_URL`)"
+      - "traefik.http.routers.PROJECT_NAME-https.rule=Host(`https://www.change-me-with-your-domain.com`)"
       - "traefik.http.routers.PROJECT_NAME-https.entrypoints=https"
       - "traefik.http.routers.PROJECT_NAME-https.middlewares=security@file, compression@file"
       - "traefik.http.routers.PROJECT_NAME-https.tls=true"
