--- a/.env
+++ b/.env
@@ -1,14 +1,2 @@
-# 1/ Project name -------------------------------------------------
-# Must be lower-case, no spaces and no invalid path chars.
-PROJECT_NAME=ec2
-
-# 2/ Global settings & configuration
-AWS_ID=aws-id
-AWS_REGION=eu-west-1
-AWS_IMAGE_REGISTRY={{name}}
-
-# 3/ Project setting & configuration -------------------
-# URL
-PROJECT_URL=project-url
-BOTCORE_URL=botcore-url
-WEBCHAT_KEY=webchat-key
+BOTCORE_URL=https://www.example.com
+WEBCHAT_KEY=webchat
